--- a/Day2/index.html
+++ b/Day2/index.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
-    
-    <head>
-        <title>titetle</title>
-        <link rel="icon" type="image/x-icon" href="./images/813750_1.png">
-    </head>
-    <body>
+<html lang="en">
+<head>
+    <title>Mi proyecto de vida</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/x-icon" href="./imgs/soldierl.png">
+</head>
+<body>
+    <header>
+    <div class="container">
+        <p class="logo">Proyect of my life</p>
+        <nav>
+            <a href="#">Sobre yo</a>
+            <a href="#">Mis metas</a>
+            <a href="#">mis aspiraciones</a>
+        </nav>
+    </div>
+    </header>
+    <section id="hero">
+        <h1>Welcome <br> to my page</h1>
+    </section>
 
-        <h1></h1>
-        <p></p>
-        <a></a>
-        <img src="">
+    <section id="soiyo">
+        <div class="container">
+            <div class="img-container"></div>
+            <h2><samp class="color-acento">SOBRE MI!</samp></h2>
+            <p>Mi nombre es Bryan Alexander Moreno Sarmiento, tengo actualmente 17 años,<br> vivo en la zona de tejaditos de piedecuesta, estoy cursando estudios de programacion <br> en una academia llamada campus ademas tomo clases de ingles y musica,<br> tengo conocimientos en culinaria y modelado 3D</p>
+        </div>
+    </section>
 
-    </body>
+    <section id="mis-metas">
+        <div class="container">
+        <h1>Mis metas a:</h1>
+
+            <div class="carta">
+                <h3>Corto plazo</h3>
+                <p>Estas son las metas que quiero cumplir en un lapzo de tiempo corto</p>
+                <button>+ info</button>
+            </div>
+            <div class="carta">
+                <h3>Medio plazo</h3>
+                <p>Estas son las metas que quiero cumplir en un lapzo de tiempo medio</p>
+                <button>+ info</button>
+            </div>
+            <div class="carta">
+                <h3>Largo plazo</h3>
+                <p>Estas son las metas que quiero cumplir en un lapzo de tiempo largo</p>
+                <button>+ info</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="misaspiraciones">
+        <div class="container">
+            <h1>Aspiraciones</h1>
+            <ul>
+                <li>🍮🍞 Ser un cocinero mundialmente reconocido</li>
+                <li>💾💻 Ser un programador de renombre</li>
+                <li>⛓️⛓️llegar a ser un strongman</li>
+                <li>💶❤️ estar bien de salud y economicamente</li>
+            </ul>
+        </div>
+    </section>
+
+</body>
+<footer>
+    <div class="container">                                           
+        <p> music copyright &copy;valve</p>
+    </div> 
+</footer>
+</html>
