--- a/Day2/index.html
+++ b/Day2/index.html
@@ -10,21 +10,26 @@
     <div class="container">
         <p class="logo">Proyect of my life</p>
         <nav>
-            <a href="#">Sobre yo</a>
-            <a href="#">Mis metas</a>
-            <a href="#">mis aspiraciones</a>
+            <a href="#soiyo">Sobre yo</a>
+            <a href="#mis-metas">Mis metas</a>
+            <a href="#misaspiraciones">mis aspiraciones</a>
         </nav>
     </div>
     </header>
     <section id="hero">
         <h1>Welcome <br> to my page</h1>
+        <audio controls>
+            <source src="./audios/videoplayback.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+        </audio>
+        <p>Musica para ambiente (apagar si no le gusta)</p>
     </section>
-
+    
     <section id="soiyo">
         <div class="container">
             <div class="img-container"></div>
             <h2><samp class="color-acento">SOBRE MI!</samp></h2>
-            <p>Mi nombre es Bryan Alexander Moreno Sarmiento, tengo actualmente 17 años,<br> vivo en la zona de tejaditos de piedecuesta, estoy cursando estudios de programacion <br> en una academia llamada campus ademas tomo clases de ingles y musica,<br> tengo conocimientos en culinaria y modelado 3D</p>
+            <p>Mi nombre es Bryan Alexander Moreno Sarmiento, tengo actualmente 17 años,<br> vivo en la zona de tejaditos de piedecuesta,soy escritor de pasion y diseñador de pensonajes de pasion, <br> estoy cursando estudios de programacion <br> en una academia llamada campus ademas tomo clases de ingles y musica,<br> tengo conocimientos en culinaria y modelado 3D</p>
         </div>
     </section>
 
