--- a/Day2/index.html
+++ b/Day2/index.html
@@ -28,29 +28,32 @@
     <section id="soiyo">
         <div class="container">
             <div class="img-container"></div>
-            <h2><samp class="color-acento">SOBRE MI!</samp></h2>
-            <p>Mi nombre es Bryan Alexander Moreno Sarmiento, tengo actualmente 17 años,<br> vivo en la zona de tejaditos de piedecuesta,soy escritor de pasion y diseñador de pensonajes de pasion, <br> estoy cursando estudios de programacion <br> en una academia llamada campus ademas tomo clases de ingles y musica,<br> tengo conocimientos en culinaria y modelado 3D</p>
-        </div>
+            <div class="texto">
+                    <h2><samp class="color-acento">SOBRE MI!</samp></h2>
+                    <p>Mi nombre es Bryan Alexander Moreno Sarmiento, tengo actualmente 17 años,<br> vivo en la zona de tejaditos de piedecuesta,soy escritor de pasion y diseñador de pensonajes de pasion, <br> estoy cursando estudios de programacion <br> en una academia llamada campus ademas tomo clases de ingles y musica,<br> tengo conocimientos en culinaria y modelado 3D</p>
+                </div>
+            </div>
     </section>
 
     <section id="mis-metas">
         <div class="container">
-        <h1>Mis metas a:</h1>
-
-            <div class="carta">
-                <h3>Corto plazo</h3>
-                <p>Estas son las metas que quiero cumplir en un lapzo de tiempo corto</p>
-                <button>+ info</button>
-            </div>
-            <div class="carta">
-                <h3>Medio plazo</h3>
-                <p>Estas son las metas que quiero cumplir en un lapzo de tiempo medio</p>
-                <button>+ info</button>
-            </div>
-            <div class="carta">
-                <h3>Largo plazo</h3>
-                <p>Estas son las metas que quiero cumplir en un lapzo de tiempo largo</p>
-                <button>+ info</button>
+            <h1>Mis metas a:</h1>
+            <div class="metas">
+                <div class="cc">
+                    <h3>Corto plazo</h3>
+                    <p>Estas son las metas que quiero cumplir en un lapzo de tiempo corto<br>tales como posicionarme como programador jr, terminar de forma sactisfactoria mis estudios<br></p>
+                    <button>+ info</button>
+                </div>
+                <div class="carta">
+                    <h3>Medio plazo</h3>
+                    <p>Estas son las metas que quiero cumplir en un lapzo de tiempo medio<br> tales como consegir una casa propia y un trabajo estable con buen rango</p>
+                    <button>+ info</button>
+                </div>
+                <div class="carta">
+                    <h3>Largo plazo</h3>
+                    <p>Estas son las metas que quiero cumplir en un lapzo de tiempo largo<br>tales como tener un estudio de desarrollo independiente, tener talvez una familia</p>
+                    <button>+ info</button>
+                </div>
             </div>
         </div>
     </section>
