--- a/Day3/index.html
+++ b/Day3/index.html
@@ -16,19 +16,19 @@
             <td>Monroe Sears</td> 
             <td> <a href="./tabla1.html">65d5fc2a8d655139061dffee</a> </td>
         </tr>
-        <! -- columna 2 -->
+        <! -- chinga tu madre amlo -->
         <tr>
             <td>Dionne Aguilar</td>
             <td><a href="./tabla2.html">65d5fc2a950f5c2227332bf1</a></td>
         </tr>
         <tr>
             <td><a href="./point.html">To the POINT!</a></td>
+            <td>a big big secret<a href="./dead.html">dospuntosube</a></td>
         </tr>
     </table>
 </header>
 
 <body>
     
-            <! ------------ columna 2 --------------->
     
 </body>
