--- a/Day4/index.html
+++ b/Day4/index.html
@@ -22,6 +22,8 @@
   <label for="hombre">Hombre</label>
   <input type="radio" id="mujer" name="sexo" value="mujer" required>
   <label for="mujer">Mujer</label>
+  <input type="radio" id="por favor" name="sexo" value="por favor" required>
+  <label for="por favor">si, por favor</label>
 
   <label for="email">Correo electrónico:</label>
   <input type="text" id="email" name="email" required>
