--- a/Day5/index.html
+++ b/Day5/index.html
@@ -12,16 +12,31 @@
     <nav>
         <p><img class="group" src="./img/Group 1.svg"> <img class="login" src="./img/Login (1).svg"></p>
     </nav>
+
+    
 </header>
 
 <section id="hero">
     <div class="img-container"><img src="./img/LogoPrimeE2.png"></div>
     <h1>Your favorite content, on one place only.</h1>
-    <p>Now you can enjoy everything from Amazon Prime Video and Twitch Prime <br> with you Amazon Prime subscription on one place that brings all the entertainment you <br> love.</p>
+    <p>Now you can enjoy everything from Amazon Prime Video and Twitch Prime  with you Amazon Prime subscription on one place that brings all the entertainment you love.</p>
     <div class="sing"><img class="sin" src="./img/Sign-Up on Amazon.svg"> <img class="rect" src="./img/Rectangle 2.svg"></div>
 </section>
 
 <body>
-    
+    <section id="cubos">
+        <div class="carta1"><img src="./img/Group 2.svg"></div>
+        <div class="carta2">
+            <img src="./img/Rectangle 3.svg" class="ss">
+            <h3>Don’t like to watch Live? No problem , we got you covered</h3>
+            <div class="mov"><img src="./img/Rectangle 1.png" class="r1"> <img src="./img/Rectangle 2.png" class="r2"> <img src="./img/Rectangle 3.png" class="r3"><img src="./img/Rectangle 4.png" class="r4"><img src="./img/Rectangle 5.png" class="r5"></div>
+            <p> <img src="./img/You’ll find a variety of movies, not only for adults but also for your family, with our without internet. 24-7. On demand..svg" class="text"></p>
+        </div>
+        <div class="carta3">
+            <p class="p1"><img src="./img/Cancel any time , anywhere.svg"></p>
+            <p></p>
+            <p></p>
+        </div>
+    </section>
 </body>
 </html>
