--- a/Day5/index.html
+++ b/Day5/index.html
@@ -33,9 +33,10 @@
             <p> <img src="./img/You’ll find a variety of movies, not only for adults but also for your family, with our without internet. 24-7. On demand..svg" class="text"></p>
         </div>
         <div class="carta3">
-            <p class="p1"><img src="./img/Cancel any time , anywhere.svg"></p>
-            <p></p>
-            <p></p>
+            <img src="./img/Rectangle blue.svg" class="gg">
+            <p><img src="./img/Cancel any time , anywhere.svg" class="cont1"></p>
+            <p><img src="./img/Icon metro-cancel.svg" class="cont2"></p>
+            <p> <img src="./img/If you don’t like our services, you can cancel anytime you want , no contracts,no fees..svg" class="cont3"></p>
         </div>
     </section>
 </body>
