--- a/Day5/index.html
+++ b/Day5/index.html
@@ -39,5 +39,24 @@
             <p> <img src="./img/If you don’t like our services, you can cancel anytime you want , no contracts,no fees..svg" class="cont3"></p>
         </div>
     </section>
+    <section>
+        <div class="d1">
+            <img src="./img/Compatible devices.svg" class="dv">
+        </div>
+        <div class="d2">
+            <img src="./img/There’s a range of devices where you can enjoy all of the content available inPrime Entertainment.svg" class="dv2">
+        </div>
+        <div class="d3">
+            <img src="./img/Flecha.svg" class="dv3">
+            <img src="./img/Image 2.png" class="dv4">
+            <img src="./img/Image 1.png" class="dv5">
+            <img src="./img/Image 3.png" class="dv6">
+            <img src="./img/Flecha.svg" class="dv7">
+        </div>  
+    </section>
 </body>
+<footer>
+    <div class="case"><img src="./img/Powered by.svg" class="pw"><img src="./img/Logo CACE Invertido UP.png" class="firma"></div>
+    <div class="legal"></div>
+</footer>
 </html>
