--- a/Day5/index.html
+++ b/Day5/index.html
@@ -57,6 +57,6 @@
 </body>
 <footer>
     <div class="case"><img src="./img/Powered by.svg" class="pw"><img src="./img/Logo CACE Invertido UP.png" class="firma"></div>
-    <div class="legal"></div>
+    <div class="legal"><img src="./img/Group 5.svg" class="g5"></div>
 </footer>
 </html>
