--- a/Day5/index.html
+++ b/Day5/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/x-icon" href="./img/LogoPrimeE2.png">
 </head>
 
 <header>
