--- a/Day6/index.html
+++ b/Day6/index.html
@@ -27,5 +27,11 @@
 </header>
 
 <section id="hero">
-    <div><img src="./img/Rectangle 1.svg"></div>
+    <div class="he1"><img src="./img/Rectangle 1.svg"></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 </section>
