--- a/Day6/index.html
+++ b/Day6/index.html
@@ -27,11 +27,41 @@
 </header>
 
 <section id="hero">
-    <div class="he1"><img src="./img/Rectangle 1.svg"></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div>
+        <img class="he1" src="./img/Rectangle 1.svg">
+    </div>
+    <div>
+        <a href=""><img class="he2"  src="./img/Icon ionic-ios-arrow-up.svg"></a>
+    </div>
+    <div>
+        <p class="he3">Cantidad</p>
+    </div>
+    <div>
+        <p class="he4">04</p>
+    </div>
+    <div>
+        <p class="he5">05</p>
+    </div>
+    <div>
+        <p class="he6">06</p>
+    </div>
+    <div>
+        <a class="he7" href=""><img src="./img/Icon ionic-ios-arrow-down.svg"></a>
+    </div>
 </section>
+
+<body>
+    <section id="tarjeta">
+        <img class="tj" src="./img/Metrolinea.png">
+    </section>
+</body>
+
+<footer>
+    <div>
+        <p class="f1">Tarjeta Metrolínea (Saldo $3000 COP)</p>
+    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</footer>
