--- a/Day6/index.html
+++ b/Day6/index.html
@@ -60,8 +60,14 @@
     <div>
         <p class="f1">Tarjeta Metrolínea (Saldo $3000 COP)</p>
     </div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div>
+        <p class="f2">$3000</p>
+    </div>
+    <div>
+        <p class="f3"><img src="./img/Rectangle 2.svg"></p>
+    </div>
+    <div>
+        <p class="f4"><img src="./img/1200px-Metrolínea_logo.svg.png"></p>
+    </div>
     <div></div>
 </footer>
