--- a/Day6/index.html
+++ b/Day6/index.html
@@ -69,5 +69,7 @@
     <div>
         <p class="f4"><img src="./img/1200px-Metrolínea_logo.svg.png"></p>
     </div>
-    <div></div>
+    <div>
+        <p class="f5">Comprar</p>
+    </div>
 </footer>
