--- a/Day6/index1.html
+++ b/Day6/index1.html
@@ -53,6 +53,8 @@
 
 
 <body>
-    
+    <section id="tarjeta">
+        <img class="tj" src="./img/Metrolinea.png">
+    </section>
 </body>
 </html>
