--- a/Day6/index1.html
+++ b/Day6/index1.html
@@ -56,5 +56,12 @@
     <section id="tarjeta">
         <img class="tj" src="./img/Metrolinea.png">
     </section>
+    <section class="escrito">
+        <div>
+            <p class="e1">Tarjeta Metrolínea de “Pepito Perez”</p>
+        </div>
+        <div></div>
+        <div></div>
+    </section>
 </body>
 </html>
