--- a/Day6/index1.html
+++ b/Day6/index1.html
@@ -60,8 +60,22 @@
         <div>
             <p class="e1">Tarjeta Metrolínea de “Pepito Perez”</p>
         </div>
-        <div></div>
+        <div>
+            <p class="e2">Saldo Actual = $3000 COP</p>
+        </div>
         <div></div>
     </section>
 </body>
+
+<footer>
+    <div>
+        <p class="f1"><img src="./img/Rectangle 2.svg"></p>
+    </div>
+    <div>
+        <p class="f2"><img src="./img/1200px-Metrolínea_logo.svg.png"></p>
+    </div>
+    <div>
+        <p class="f3">Comprar</p>
+    </div>
+</footer>
 </html>
