--- a/Day6/index.html
+++ b/Day6/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./transicion.css">
     
 </head>
 
