--- a/Day6/index1.html
+++ b/Day6/index1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="indes1.css">
+    <link rel="stylesheet" href="./trancision.css">
 </head>
 
 <header>
@@ -63,7 +64,12 @@
         <div>
             <p class="e2">Saldo Actual = $3000 COP</p>
         </div>
-        <div></div>
+        <div>
+            <p class="e3">Saldo Escogido:</p>
+        </div>
+        <div class="e4">
+            <input type="text" class="miCuadroDeTexto" name="nombre">
+        </div>
     </section>
 </body>
 
