--- a/Day6/index1.html
+++ b/Day6/index1.html
@@ -68,7 +68,7 @@
             <p class="e3">Saldo Escogido:</p>
         </div>
         <div class="e4">
-            <input type="text" class="miCuadroDeTexto" name="nombre">
+            <input type="text" class="miCuadroDeTexto" placeholder="$0000">
         </div>
     </section>
 </body>
