--- a/Day6/index.html
+++ b/Day6/index.html
@@ -62,10 +62,10 @@
         <p class="f1">Tarjeta Metrolínea (Saldo $3000 COP)</p>
     </div>
     <div>
-        <p class="f2">$3000</p>
+        <p class="f2">$3000 COP</p>
     </div>
     <div>
-        <p class="f3"><img src="./img/Rectangle 2.svg"></p>
+        <p class="f3"><img src="./img/Rectangle 2.jpg"></p>
     </div>
     <div>
         <p class="f4"><img src="./img/1200px-Metrolínea_logo.svg.png"></p>
