--- a/Day6/index1.html
+++ b/Day6/index1.html
@@ -75,7 +75,7 @@
 
 <footer>
     <div>
-        <p class="f1"><img src="./img/Rectangle 2.svg"></p>
+        <p class="f1"><img src="./img/Rectangle 2.jpg"></p>
     </div>
     <div>
         <p class="f2"><img src="./img/1200px-Metrolínea_logo.svg.png"></p>
