--- a/Day6/index.html
+++ b/Day6/index.html
@@ -27,35 +27,37 @@
     
 </header>
 
-<section id="hero">
-    <div>
-        <img class="he1" src="./img/Rectangle 1.svg">
-    </div>
-    <div>
-        <a href=""><img class="he2"  src="./img/Icon ionic-ios-arrow-up.svg"></a>
-    </div>
-    <div>
-        <p class="he3">Cantidad</p>
-    </div>
-    <div>
-        <p class="he4">04</p>
-    </div>
-    <div>
-        <p class="he5">05</p>
-    </div>
-    <div>
-        <p class="he6">06</p>
-    </div>
-    <div>
-        <a class="he7" href=""><img src="./img/Icon ionic-ios-arrow-down.svg"></a>
-    </div>
-</section>
 
 <body>
+    <section id="hero">
+        <div class="he1">
+            
+        </div>
+        <div>
+            <a href=""><img class="he2"  src="./img/Icon ionic-ios-arrow-up.svg"></a>
+        </div>
+        <div>
+            <p class="he3">Cantidad</p>
+        </div>
+        <div>
+            <p class="he4">04</p>
+        </div>
+        <div>
+            <p class="he5">05</p>
+        </div>
+        <div>
+            <p class="he6">06</p>
+        </div>
+        <div>
+            <a class="he7" href=""><img src="./img/Icon ionic-ios-arrow-down.svg"></a>
+        </div>
+    </section>
+
     <section id="tarjeta">
         <img class="tj" src="./img/Metrolinea.png">
     </section>
 </body>
+
 
 <footer>
     <div>
@@ -65,7 +67,7 @@
         <p class="f2">$3000 COP</p>
     </div>
     <div>
-        <p class="f3"><img src="./img/Rectangle 2.jpg"></p>
+        <p class="f3"></p>
     </div>
     <div>
         <p class="f4"><img src="./img/1200px-Metrolínea_logo.svg.png"></p>
