--- a/day10/index.html
+++ b/day10/index.html
@@ -12,6 +12,14 @@
         <div class="a3"><img src="./img/82db8becff6a10a.png" alt=""></div>
         <div class="a4"><img src="./img/82db8becff6a10a.png" alt=""></div>
         <div class="a5"><img src="./img/dc051dae52eb185.png" alt=""></div>
+        <div class="a6"><img src="./img/Angry_Nimbus.gif" alt=""></div>
+        
+        <div class="a7"> <img src="./img/Spirit_Flame_(projectile).gif" alt=""></div> 
+        <div class="a8"> <img src="./img/Spirit_Flame_(projectile).gif" alt=""></div>
+        <div class="a9"> <img src="./img/Spirit_Flame_(projectile).gif" alt=""></div>
+        <div class="a10"> <img src="./img/Spirit_Flame_(projectile).gif" alt=""></div>
+        <div class="a11"> <img src="./img/Spirit_Flame_(projectile).gif" alt=""></div>
+        <div class="a12"> <img src="./img/Spirit_Flame_(projectile).gif" alt=""></div>
 </section>
 </body>
 </html>
