--- a/day10/index.html
+++ b/day10/index.html
@@ -20,6 +20,10 @@
         <div class="a10"> <img src="./img/Spirit_Flame_(projectile).gif" alt=""></div>
         <div class="a11"> <img src="./img/Spirit_Flame_(projectile).gif" alt=""></div>
         <div class="a12"> <img src="./img/Spirit_Flame_(projectile).gif" alt=""></div>
+
+        <div class="b1"><img src="./img/Sunflower.webp" alt=""></div>
+        <div class="b2"><img src="./img/Sunflower.webp" alt=""></div>
+        <div class="b3"><img src="./img/Sunflower.webp" alt=""></div>
 </section>
 </body>
 </html>
