--- a/day10/index.html
+++ b/day10/index.html
@@ -24,6 +24,11 @@
         <div class="b1"><img src="./img/Sunflower.webp" alt=""></div>
         <div class="b2"><img src="./img/Sunflower.webp" alt=""></div>
         <div class="b3"><img src="./img/Sunflower.webp" alt=""></div>
+
+        <div class="c1">3</div>
+        <div class="c2">2</div>
+        <div class="c3">1</div>
+        <div class="c4">Action</div>
 </section>
 </body>
 </html>
